@@ -1,3 +1,5 @@
+SUBDIRS = examples
+
 # The c++ and aolserver contrib directories are out of date and are
 # are pointless to distribute in the offical source release.
 
